# maoris

./: .gitignore  CMakeLists.txt  README.md  main.cpp  maoris-config.cmake
Test/: CMakeLists.txt  test_collisionblob.cpp
Test/stats_python/: stats.py
include/: CMakeLists.txt  EdgeZone.hpp  FuzzyOpening.hpp  GraphZone.hpp  Histogram.hpp  Kmean.hpp  MeanShift.hpp  Segmentor.hpp  Utils.hpp  Zone.hpp  ZoneExtractor.hpp  ZoneReducer.hpp
include/Evaluation/: Evaluation.hpp  EvaluationParam.hpp  Measures.hpp
src/: CMakeLists.txt  FuzzyOpening.cpp  GraphZone.cpp  Kmean.cpp  Segmentor.cpp  Zone.cpp  ZoneExtractor.cpp  evaluation_2files_folder.cpp  evaluation_2gt.cpp  evaluation_gt.cpp  evaluation_gt_all_files.cpp  evaluation_gt_param.cpp  live_segmentation.cpp  read_data_gnuplot.py  segmentation.cpp  segmentation_example.cpp  thermal_segmentation.cpp
src/Evaluation/: CMakeLists.txt  Evaluation.cpp
